--- a/.spacemacs.d/sakura.org
+++ b/.spacemacs.d/sakura.org
@@ -1,6 +1,6 @@
 #+TITLE:    Sakura Emacs - Literate Configuration
 #+AUTHOR:   Jonathan Crum
-#+PROPERTY: header-args :tangle yes
+#+PROPERTY: header-args :tangle "./init.el"
 
 * Table of Contents                                                :TOC_3_gh:
 - [[#planning][Planning]]
@@ -33,6 +33,9 @@
     - [[#automatic-tangle][Automatic Tangle]]
   - [[#layers-1][Layers]]
   - [[#init][Init]]
+  - [[#functions][Functions]]
+  - [[#user-init][User Init]]
+  - [[#user-config][User Config]]
 - [[#lisp-notes][Lisp Notes]]
   - [[#set][set]]
   - [[#setq][setq]]
@@ -40,9 +43,7 @@
 
 * Planning
 My biggest goal for Emacs is to have a totally customized configuration from the ground up.
-
 I think this should be possible, especially since I realized I could just... you know, make an experimental branch for my dotfiles repo.
-
 So then, here I want to start piecing together what components I find appealing about stock Spacemacs so that I can figure out how to implement them on my own.
 
 ** Layers
@@ -82,9 +83,12 @@ Ideally I want to make a central theme that has a light and dark mode. The name 
 ** About This File
 ** Org File Tweaks
 *** Automatic Tangle
+:PROPERTIES:
+:header-args: :tangle no
+:END:
 There is a property defined in the header metadata of this file.
 
-#+BEGIN_SRC :tangle no
+#+BEGIN_SRC
 header-args :tangle yes
 #+END_SRC
 
@@ -94,12 +98,18 @@ This tells emacs to automatically tangle all of the code blocks in this file whe
 #+BEGIN_SRC emacs-lisp
   ;; -*- mode: emacs-lisp -*-
 
+  ;; S A K U R A Spacemacs
+
   (defun dotspacemacs/layers ()
     (setq-default
      dotspacemacs-distribution 'spacemacs
-     dotspacemacs-configuration-layer-path '()
+     dotspacemacs-configuration-layer-path '("~/.spacemacs.d/layers/")
      dotspacemacs-configuration-layers
-     '((auto-completion :variables
+     '((config   :location local)
+       (display  :location local)
+       (sakura   :location local)
+
+       (auto-completion :variables
                         auto-completion-enable-snippets-in-popup t
                         auto-completion-enable-sort-by-usage t)
        bibtex
@@ -169,7 +179,10 @@ Importantly, it is in this file that the environment variable =SPACEMACSDIR= is 
    dotspacemacs-whitespace-cleanup 'trailing
    ))
 
+#+END_SRC
 
+** Functions
+#+BEGIN_SRC emacs-lisp
 (defun my-save-if-bufferfilename()
   (if (buffer-file-name)
       (progn
@@ -181,7 +194,13 @@ Importantly, it is in this file that the environment variable =SPACEMACSDIR= is 
   (pdf-view-auto-slice-minor-mode)
   (run-at-time "0.5 sec" nil #'org-noter))
 
+#+END_SRC
+
+** User Init
+#+BEGIN_SRC emacs-lisp
 (defun dotspacemacs/user-init ()
+  (defconst user-layer-dir (file-name-as-directory "~/.spacemacs.d/local/sakura"))
+
   ;; Package Archives
   (require 'package)
   (setq package-enable-at-startup nil)
@@ -199,16 +218,18 @@ Importantly, it is in this file that the environment variable =SPACEMACSDIR= is 
   (setq custom-file "~/.spacemacs.d/.custom-settings.el")
   (load-file custom-file))
 
+#+END_SRC
+
+** User Config
+#+BEGIN_SRC emacs-lisp
 (defun dotspacemacs/user-config ()
   ;; Requisites
   (require 'org)
   (require 'org-projectile)
   (require 'org-roam)
 
-
   ;; Keybinding Modifications
-  (global-unset-key (kbd "C-z"))
-
+  ;; (global-unset-key (kbd "C-z"))
 
   ;; User Variables
   ;;;; Paths
