Pausing experimental to take structured approach

--- a/.spacemacs.d/sakura.org
+++ b/.spacemacs.d/sakura.org
@@ -1,98 +1,32 @@
 #+TITLE:    Sakura Emacs - Literate Configuration
 #+AUTHOR:   Jonathan Crum
-#+PROPERTY: header-args :tangle "./init.el"
 
 * Table of Contents                                                :TOC_3_gh:
-- [[#planning][Planning]]
+- [[#about-this-file][About this file]]
+- [[#core-init][Core Init]]
   - [[#layers][Layers]]
-    - [[#auto-completion][Auto-Completion]]
-    - [[#bibtex][Bibtex]]
-    - [[#emacs-lisp][Emacs-Lisp]]
-    - [[#helm][Helm]]
-    - [[#markdown][Markdown]]
-    - [[#org][Org]]
-  - [[#spacemacs-packages][Spacemacs Packages]]
-  - [[#additional-packages][Additional Packages]]
-    - [[#deft][Deft]]
-    - [[#doom-modeline][Doom-Modeline]]
-    - [[#doom-themes][Doom-Themes]]
-    - [[#guide-key][Guide-Key]]
-    - [[#magit][Magit]]
-    - [[#org-noter][Org-Noter]]
-    - [[#org-ref][Org-Ref]]
-    - [[#org-roam][Org-Roam]]
-    - [[#pdfgrep][Pdfgrep]]
-    - [[#pdf-tools][Pdf-Tools]]
-    - [[#zotxt][Zotxt]]
-  - [[#keybindings][Keybindings]]
-  - [[#theming][Theming]]
-  - [[#other-comments][Other Comments]]
-- [[#configuration][Configuration]]
-  - [[#about-this-file][About This File]]
-  - [[#org-file-tweaks][Org File Tweaks]]
-    - [[#automatic-tangle][Automatic Tangle]]
-  - [[#layers-1][Layers]]
   - [[#init][Init]]
   - [[#functions][Functions]]
   - [[#user-init][User Init]]
   - [[#user-config][User Config]]
-- [[#lisp-notes][Lisp Notes]]
-  - [[#set][set]]
-  - [[#setq][setq]]
-  - [[#setq-default][setq-default]]
+- [[#configuration-layers][Configuration Layers]]
+  - [[#config][/config]]
+    - [[#keybindings][keybindings]]
+    - [[#funcs][funcs]]
+    - [[#layers-1][layers]]
+    - [[#packages][packages]]
+  - [[#display][/display]]
+    - [[#config-1][config]]
+    - [[#funcs-1][funcs]]
+    - [[#layers-2][layers]]
+    - [[#packages-1][packages]]
 
-* Planning
-My biggest goal for Emacs is to have a totally customized configuration from the ground up.
-I think this should be possible, especially since I realized I could just... you know, make an experimental branch for my dotfiles repo.
-So then, here I want to start piecing together what components I find appealing about stock Spacemacs so that I can figure out how to implement them on my own.
-
-** Layers
-*** Auto-Completion
-*** Bibtex
-*** Emacs-Lisp
-*** Helm
-*** Markdown
-*** Org
-** Spacemacs Packages
-I need to see what packages are installed with Spacemacs that I take for granted, but that are not presently in my configuration.
-
-** Additional Packages
-*** Deft
-*** Doom-Modeline
-*** Doom-Themes
-*** Guide-Key
-*** Magit
-*** Org-Noter
-*** Org-Ref
-*** Org-Roam
-*** Pdfgrep
-*** Pdf-Tools
-*** Zotxt
-
-** Keybindings
-** Theming
-Ideally I want to make a central theme that has a light and dark mode. The name of the config, *Sakura*, should give an idea of what I am going for. The color palette should be soothing, and ideally inspired by the cherry blossom.
-
-[[https://github.com/lepisma/rogue][Lepisma's Rogue configuration]] has a very similar aesthetic to it, and it will be a great exemplar to look at for theming.
-** Other Comments
-
-* Configuration
+* About this file
+* Core Init
 :PROPERTIES:
+:header-args: :tangle "./init.el"
 :VISIBILITY: children
 :END:
-** About This File
-** Org File Tweaks
-*** Automatic Tangle
-:PROPERTIES:
-:header-args: :tangle no
-:END:
-There is a property defined in the header metadata of this file.
-
-#+BEGIN_SRC
-header-args :tangle yes
-#+END_SRC
-
-This tells emacs to automatically tangle all of the code blocks in this file when generating the code for the configuration, unless we explicitly define =:tangle no= in the code block options.
 
 ** Layers
 #+BEGIN_SRC emacs-lisp
@@ -104,6 +38,7 @@ This tells emacs to automatically tangle all of the code blocks in this file whe
     (setq-default
      dotspacemacs-distribution 'spacemacs
      dotspacemacs-configuration-layer-path '("~/.spacemacs.d/layers/")
+
      dotspacemacs-configuration-layers
      '((config   :location local)
        (display  :location local)
@@ -120,6 +55,7 @@ This tells emacs to automatically tangle all of the code blocks in this file whe
        typescript
        org
        )
+
      dotspacemacs-additional-packages
      '(
        deft
@@ -360,23 +296,60 @@ Importantly, it is in this file that the environment variable =SPACEMACSDIR= is 
                                 TeX-command-list))))
 #+END_SRC
 
-* Lisp Notes
-** set
-The function =set= binds a variable to a value. The syntax is:
+* Configuration Layers
+** /config
+The config layer is where all non-display configuration takes place. For example, any layers that I want in my emacs build are declared and initialized here, as well as any keybinding modifications. Importantly, this is also where packages that are not part of a defined layer are declared and configured, thereby becoming subsumed as part of the Sakura layer.
 
-#+BEGIN_SRC emacs-lisp :tangle no
-(set 'carnivores '(lion tiger leopard))
+*** keybindings
+
+#+BEGIN_SRC emacs-lisp :tangle "./layers/config/keybindings.el"
 #+END_SRC
 
-The first argument is quoted, a convention that is so frequent it has been abbreviated into a special =setq= function.
+*** funcs
 
-** setq
-The function =setq= is identical to =set= but for the fact that it abbreviates the first argument's quote.
-
-#+BEGIN_SRC emacs-lisp :tangle no
-(setq carnivores '(lion tiger leopard))
+#+BEGIN_SRC emacs-lisp :tangle "./layers/config/funcs.el"
 #+END_SRC
-** setq-default
-Some variables in Emacs are "buffer-local", which means that each buffer is allowed to have a separate value for that variable that overrides a global default. If a given variable is buffer-local, =setq= sets its value in the current buffer, and =setq-default= sets the global value.
 
-If, however, the variable is not buffer-local, then =setq= and =setq-default= are identical.
+*** layers
+
+#+BEGIN_SRC emacs-lisp :tangle "./layers/config/layers.el"
+#+END_SRC
+
+*** packages
+
+#+BEGIN_SRC emacs-lisp :tangle "./layers/config/packages.el"
+(setq config-packages
+  '(;; Unowned Packages
+    ranger
+    ))
+
+(defun config/pre-init-ranger()
+  (setq ranger-deer-show-details nil)
+  (evil-global-set-key 'normal "_" 'ranger)
+  (spacemacs|use-package-add-hook ranger
+    :post-config
+    (bind-keys :map ranger-mode-map
+               ("n"   . dired-create-directory)))
+
+#+END_SRC
+
+** /display
+*** config
+
+#+BEGIN_SRC emacs-lisp :tangle "./layers/display/config.el"
+#+END_SRC
+
+*** funcs
+
+#+BEGIN_SRC emacs-lisp :tangle "./layers/display/funcs.el"
+#+END_SRC
+
+*** layers
+
+#+BEGIN_SRC emacs-lisp :tangle "./layers/display/layers.el"
+#+END_SRC
+
+*** packages
+
+#+BEGIN_SRC emacs-lisp :tangle "./layers/display/packages.el"
+#+END_SRC
